internal/app/playbooks/role/catalogs/SampleCode/Nodejs/files/node-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-demo-api-ingress
  namespace: nodeapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: node-api.cnstudio.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: node-demo-api-svc
            port: 
              number: 3000
